--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
+  "scripts": {
+    "start": "nodemon app.js"
+  },
   "dependencies": {
     "dotenv": "^6.2.0",
-    "kafka-node": "^4.0.1"
+    "kafka-node": "^4.0.1",
+    "nodemon": "^1.18.10"
   }
 }
