--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   },
   "dependencies": {
     "dotenv": "^6.2.0",
+    "express": "^4.16.4",
     "kafka-node": "^4.0.1",
     "nodemon": "^1.18.10",
-    "winston": "^3.2.1"
+    "socket.io": "^2.2.0",
+    "winston": "^3.2.1",
+    "ws": "^6.2.0"
   },
   "name": "node-kafka",
   "version": "1.0.0",
